syntax = "proto3";

enum Command {
    NEW_BLK = 0;
}

